# FuzzyMatcher

./: .gitignore  FuzzyMatcher.code-workspace  README.md  agent.py  main.py  main_db.py  pyproject.toml  requirements.txt
output/: s1_90.xlsx  s2_90.xlsx  s3_90.xlsx  s4_90.xlsx  s8_90.xlsx  snorm.xlsx  snorm16k.xlsx  snorm_input_81224.csv  snorm_oinput_81224.csv  test_csu_snorm.xlsx  ~$snorm.xlsx
project_utils/: aid.py  file_staging.py
raw/: csu_fivesixseven.csv  csusupps_sample.csv  the new new.csv  vendors16k.csv
raw/archive/: s1.csv  s2.csv  s3.csv  s4.csv  s5.csv  s7.csv  s8.csv
tests/: test_aid.py  test_file_staging.py  test_main.py
utils/: __init__.py  file_staging.py  utils.py
