[tool.poetry]
name = "fuzzymatcher"
version = "0.1.0"
description = "for matching strings"
authors = ["Travis Vasceannie <travis.vasceannie@risenow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
rapidfuzz = "^3.9.6"
tqdm = "^4.66.5"
openpyxl = "^3.1.5"
psutil = "^6.0.0"
numpy = "^2.0.1"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
chardet = "^5.2.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
